# robot_simulation

./: .gitmodules  README.md
debs/: ros-humble-robotnik-controller_0.0.0-20241219.115440-local_amd64.deb  ros-humble-robotnik-controller_0.0.0-20250115.114340-local_amd64.deb  ros-humble-robotnik-controller_0.0.0-20250131.153235-local_amd64.deb  ros-humble-robotnik-interfaces_2.2.0-20241219.115354-5c44131_amd64.deb  ros-humble-robotnik-msgs_2.2.0-20241219.115356-5c44131_amd64.deb  ros-humble-robotnik-safety-msgs_2.2.0-20241219.115432-5c44131_amd64.deb
robot_description_simulation/: CMakeLists.txt  README.md  package.xml
robot_description_simulation/launch/: robot_description.launch.py
robot_description_simulation/robots/macros/: rbsteel_macro.urdf.xacro
robot_description_simulation/robots/rbkairos/: rbkairos.urdf.xacro  rbkairos_ur.urdf.xacro  rbkairos_ur5e.urdf.xacro
robot_description_simulation/robots/rbsteel/: rbsteel.urdf.xacro
robot_description_simulation/robots/rbsummit/: rbsummit.urdf.xacro
robot_description_simulation/robots/rbtheron/: rbtheron.urdf.xacro
robot_description_simulation/robots/rbvogui/: rbvogui.urdf.xacro  rbvogui_cart.urdf.xacro
robot_description_simulation/ros2_control/classic/: rbkairos_control.urdf.xacro  rbsummit_control.urdf.xacro  rbtheron_control.urdf.xacro  rbvogui_control.urdf.xacro
robot_description_simulation/ros2_control/ignition/: rbkairos_control.urdf.xacro  rbsummit_control.urdf.xacro  rbtheron_control.urdf.xacro  rbvogui_control.urdf.xacro
robotnik_gazebo_classic/: CMakeLists.txt  package.xml
(+13 files in other folders)
